--- a/index.html
+++ b/index.html
@@ -136,11 +136,58 @@
         </section>
     </main>
 
-    <section id="blog">
+    <section id="services">
 
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#1c1c1c" fill-opacity="1" d="M0,128L12.6,154.7C25.3,181,51,235,76,218.7C101.1,203,126,117,152,90.7C176.8,64,202,96,227,96C252.6,96,278,64,303,85.3C328.4,107,354,181,379,202.7C404.2,224,429,192,455,170.7C480,149,505,139,531,165.3C555.8,192,581,256,606,266.7C631.6,277,657,235,682,181.3C707.4,128,733,64,758,42.7C783.2,21,808,43,834,69.3C858.9,96,884,128,909,149.3C934.7,171,960,181,985,186.7C1010.5,192,1036,192,1061,176C1086.3,160,1112,128,1137,138.7C1162.1,149,1187,203,1213,202.7C1237.9,203,1263,149,1288,154.7C1313.7,160,1339,224,1364,229.3C1389.5,235,1415,181,1427,154.7L1440,128L1440,0L1427.4,0C1414.7,0,1389,0,1364,0C1338.9,0,1314,0,1288,0C1263.2,0,1238,0,1213,0C1187.4,0,1162,0,1137,0C1111.6,0,1086,0,1061,0C1035.8,0,1011,0,985,0C960,0,935,0,909,0C884.2,0,859,0,834,0C808.4,0,783,0,758,0C732.6,0,707,0,682,0C656.8,0,632,0,606,0C581.1,0,556,0,531,0C505.3,0,480,0,455,0C429.5,0,404,0,379,0C353.7,0,328,0,303,0C277.9,0,253,0,227,0C202.1,0,177,0,152,0C126.3,0,101,0,76,0C50.5,0,25,0,13,0L0,0Z"></path></svg>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#1c1c1c" fill-opacity="1" d="M0,96L16,80C32,64,64,32,96,37.3C128,43,160,85,192,122.7C224,160,256,192,288,186.7C320,181,352,139,384,149.3C416,160,448,224,480,229.3C512,235,544,181,576,186.7C608,192,640,256,672,250.7C704,245,736,171,768,154.7C800,139,832,181,864,186.7C896,192,928,160,960,133.3C992,107,1024,85,1056,96C1088,107,1120,149,1152,138.7C1184,128,1216,64,1248,53.3C1280,43,1312,85,1344,112C1376,139,1408,149,1424,154.7L1440,160L1440,320L1424,320C1408,320,1376,320,1344,320C1312,320,1280,320,1248,320C1216,320,1184,320,1152,320C1120,320,1088,320,1056,320C1024,320,992,320,960,320C928,320,896,320,864,320C832,320,800,320,768,320C736,320,704,320,672,320C640,320,608,320,576,320C544,320,512,320,480,320C448,320,416,320,384,320C352,320,320,320,288,320C256,320,224,320,192,320C160,320,128,320,96,320C64,320,32,320,16,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#1c1c1c" fill-opacity="1" d="M0,160L34.3,144C68.6,128,137,96,206,106.7C274.3,117,343,171,411,192C480,213,549,203,617,186.7C685.7,171,754,149,823,165.3C891.4,181,960,235,1029,240C1097.1,245,1166,203,1234,202.7C1302.9,203,1371,245,1406,266.7L1440,288L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"></path></svg>
 
+        <div class="container-services">
+            <div class="services-img">
+                <img src="https://images.unsplash.com/photo-1536152470836-b943b246224c?q=80&w=2838&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="services">
+            </div>
+            <div class="services-content">
+                <p>Services</p>
+                <h2>Lorem ipsum dolor sit.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem provident vero libero beatae illo ipsum odio officiis, dignissimos nesciunt ipsa!</p>
+                
+                <div class="services-box">
+                    <div class="box-title">
+                        <div class="icon">
+                            <i class="fa-solid fa-key"></i>
+                            <span>Service key</span>
+                        </div>
+                        <i class="fa-solid fa-caret-down"></i>
+                    </div>
+                    <div class="box-content">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    </div>
+                </div>
+                <div class="services-box">
+                    <div class="box-title">
+                        <div class="icon">
+                            <i class="fa-solid fa-car-side"></i>
+                            <span>Service car</span>
+                        </div>
+                        <i class="fa-solid fa-caret-down"></i>
+                    </div>
+                    <div class="box-content">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore suscipit</p>
+                    </div>
+                </div>
+                <div class="services-box">
+                    <div class="box-title">
+                        <div class="icon">
+                            <i class="fa-solid fa-utensils"></i>
+                            <span>Service food</span>
+                        </div>
+                        <i class="fa-solid fa-caret-down"></i>
+                    </div>
+                    <div class="box-content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, inventore ab qui dolor eos culpa molestias officia soluta! Quia, sunt.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </section>
     <section id="contact">
         <div class="logo-slider">
