add Package Page

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <nav class="menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#blog">Blogs</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#team">Team</a></li>
+                    <li><a href="#package">Package</a></li>
+                    <li><a href="#blog">Blogs</a></li>
                     <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
@@ -37,9 +37,9 @@
     <nav class="mobile-menu">
         <ul>
             <li class="active"><a href="#home"><i class="fa-solid fa-house"></i></a></li>
-            <li><a href="#blog"><i class="fa-solid fa-folder"></i></a></li>
             <li><a href="#services"><i class="fa-solid fa-address-book"></i></a></li>
-            <li><a href="#team"><i class="fa-solid fa-people-group"></i></a></li>
+            <li><a href="#package"><i class="fa-solid fa-star"></i></a></li>
+            <li><a href="#blog"><i class="fa-solid fa-folder"></i></a></li>
             <li><a href="#contact"><i class="fa-solid fa-phone"></i></a></li>
         </ul>
     </nav>
@@ -157,7 +157,7 @@
                         </div>
                         <i class="fa-solid fa-caret-down"></i>
                     </div>
-                    <div class="box-content">
+                    <div class="box-content active">
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     </div>
                 </div>
@@ -186,6 +186,39 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+    <section id="package">
+        <div class="container-package">
+            <div class="package-content">
+                <div class="package-title">
+                    <h2>Special Package for you</h2>
+                    <a href="#">
+                        <i class="fa-solid fa-arrow-right"></i>
+                        <span>LEARN MORE</span>
+                    </a>
+                </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa non dolor enim odit saepe rerum ipsam numquam magni mollitia eveniet voluptatem reiciendis</p>
+            </div>
+            <div class="package-wrap">
+                <div class="package-box-1">
+                    <div class="package-img">
+                        <img src="https://images.unsplash.com/photo-1530250418330-cb2c35da5277?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="package">
+                        <img src="https://images.unsplash.com/photo-1482192505345-5655af888cc4?q=80&w=3028&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="package">
+                    </div>
+                    <img src="https://images.unsplash.com/photo-1463694372132-6c267f6ba561?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="package">
+                </div>
+                <div class="package-box-2">
+                    <img src="https://images.unsplash.com/photo-1458262488536-98366625ae59?q=80&w=2934&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="package">
+                    <div class="package-box-text">
+                        <button>WHY CHOOSE US</button>
+                        <h2>Add Your Heading</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores accusamus expedita eveniet.</p>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </section>
