--- a/index.html
+++ b/index.html
@@ -413,11 +413,11 @@
                 <div class="scroll-wrap">
                     <div class="scroll">
                         <img src="./image/travel-logo-01.png" alt="logo">
-                        <img src="./image/travel-logo-02.png" alt="logo">
-                        <img src="./image/travel-logo-03.png" alt="logo">
-                        <img src="./image/travel-logo-04.png" alt="logo">
-                        <img src="./image/travel-logo-05.png" alt="logo">
-                        <img src="./image/travel-logo-06.png" alt="logo">
+                        <img src="./image/Travel-logo-02.png" alt="logo">
+                        <img src="./image/Travel-logo-03.png" alt="logo">
+                        <img src="./image/Travel-logo-04.png" alt="logo">
+                        <img src="./image/Travel-logo-05.png" alt="logo">
+                        <img src="./image/Travel-logo-06.png" alt="logo">
                     </div>
                 </div>
             </div>
